Made some modifications changing localhost number
